issue-#18969 aligned community-library search bar

--- a/core/templates/pages/library-page/search-bar/search-bar.component.css
+++ b/core/templates/pages/library-page/search-bar/search-bar.component.css
@@ -209,7 +209,7 @@ oppia-search-bar .oppia-input-group {
     max-width: none;
     padding: 8px 7px 0 6px;
     text-align: center;
-    width: 159px;
+    width: 165px;
   }
   .oppia-search-bar-input.btn:hover,
   .oppia-search-bar-input.btn:focus {
